# LPCNet

./: .gitmodules  CMakeLists.txt  README.md  feature_extract.sh  header_removal.sh
include/: lpcnet.h
src/: celt_lpc.c  celt_lpc.h  common.h  dump_bin_lpcnet.py  dump_data.c  dump_data.cpp  dump_lpcnet.py  freq.c  kiss_fft.c  kiss_fft.h  lpcnet.c  lpcnet.py  lpcnet_enc.c  lpcnet_private.h  mdense.py  nnet.c  nnet.h  pitch.c  pitch.h  test_lpcnet.c  test_lpcnet.cpp  test_lpcnet.py  train_lpcnet.py  vec.h  vec_avx.h  vec_neon.h
